# TangSynth9

./: .gitignore  .svlint.toml  README.md
docs/: 00 Overview.md  00 SOC Overview.md  01 Introduction.md  01 MCU Design.md  01 The MCU.md  02 Audio Pipeline Design.md  02 MCU Modules.md  03 Audio Pipeline Design.md  03 Synthesiser Architecture.md  04 Synthesiser Architecture.md
docs/Notebook/: 15_06_2026.md
docs/assets/drawio/: aud_overview.drawio  aud_voice.drawio  soc_architecture.drawio  sw_architecture.drawio  synth_blocks.drawio
hw/constraints/: tangsynth9.cst  tangsynth9.sdc
hw/rtl/: clock_gen.sv  defs.svh  top.sv
hw/rtl/audio/: aud_pipeline.sv  i2s_tx.sv  test_tone.sv
hw/rtl/common/: buffer.sv
hw/rtl/ip/: clock_gen.sv  flash.sv
hw/rtl/mcu/: buffer.sv  mcu.sv  midi.sv  serial_rx.sv  serial_tx.sv  trace.sv  vram.sv  vram_block.sv  vrcr.sv
hw/rtl/soc/: apcr.sv  gpo.sv  midi.sv  pcr.sv  serial_rx.sv  soc.sv  sram.sv  sram_block.sv  trace.sv  uart_tx.sv  vram.sv  vrcr.sv
hw/test/buffer/: Makefile  buffer_tb.sv
hw/test/i2s_tx/: Makefile  i2s_tx_tb.sv
hw/test/serial_rx/: Makefile  serial_rx_tb.sv
hw/test/serial_tx/: serial_tx_tb.sv
hw/test/uart_tx/: Makefile  uart_tx_tb.sv
hw/test/vram/: Makefile  vram_tb.sv
hw/test/vrcr/: Makefile  vrcr_tb.sv
hw/tools/: build.tcl  gw.sh  parse_reports.py
sw/: CMakeLists.txt  CMakePresets.json
sw/cmake/: host_gcc.cmake  rv32imc_gcc.cmake
sw/source/: CMakeLists.txt  main.c
sw/source/bsp/: bsp.h  drv.c  drv.h  linker.lds  runtime.c  start.S  trace.h
sw/source/controller/: controller.c  controller.h  env.c  env.h  env_luts.c  env_luts.h  lfo.c  luts.c  luts.h  midi.c  params.c  params.h  types.h  voice.c  voice.h
sw/source/synth/: env.h  lfo.h  luts.c  midi.c  midi.h  params.h  synth.c  synth.h  types.h  voice.c  voice.h
sw/test/: CMakeLists.txt  test_env.c  test_lfo.c  test_midi.c  test_params.c  test_synth.c  test_voice.c
sw/tools/: bin_to_hex.py  env_gen_luts.out  env_gen_luts.py  gen_luts.py  luts.out
